--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
             width: 100%;
             border-radius: 4px;
         }
+        .button-container {
+            text-align: center;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            margin-top: 10px;
+            cursor: pointer;
+            background-color: #4caf50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 <body>
@@ -76,7 +92,7 @@
         <option value="animals">Animals</option>
         <option value="food">Food</option>
         <option value="jlptN5">JLPT N5</option>
-        <option value="jlptN1" selected>JLPT N1</option> <!-- Set JLPT N1 as default -->
+        <option value="jlptN1" selected>JLPT N1</option>
     </select>
 
     <div id="word"></div>
@@ -87,6 +103,10 @@
     <div class="progress-bar">
         <div id="progress-bar" class="progress-bar-inner"></div>
     </div>
+
+    <div class="button-container">
+        <button id="skipButton" onclick="skipWord()">Skip</button>
+    </div>
 </div>
 
 <script>
@@ -95,6 +115,7 @@ let categories = {};
 let currentCategory = 'jlptN1'; // Set default category to 'jlptN1'
 let currentWordIndex = 0;
 let score = 0;
+let isAnswerSubmitted = false;  // To check if the answer has been submitted
 
 // Load the word lists from the JSON files
 fetch('animals.json')
@@ -155,6 +176,7 @@ function showNextWord() {
     document.getElementById('feedback').textContent = '';
     document.getElementById('answer').value = '';
     document.getElementById('answer').focus();
+    isAnswerSubmitted = false;
     const audio = new Audio(word.audio);
     audio.play();
     updateProgressBar();
@@ -170,10 +192,12 @@ function shuffleWords(array) {
 
 // Check the typed answer
 function checkAnswer() {
+    if (isAnswerSubmitted) return;  // If answer has already been submitted, prevent further input
+
     const input = document.getElementById('answer').value.trim();
     const word = categories[currentCategory][currentWordIndex];
 
-    if (word.answers.includes(input)) {
+    if (input && word.answers.includes(input)) {
         score++;
         document.getElementById('feedback').textContent = '✅ Correct!';
         currentWordIndex++;
@@ -194,6 +218,28 @@ function checkAnswer() {
     } else {
         document.getElementById('feedback').textContent = '❌ Try again!';
     }
+    isAnswerSubmitted = true;
+}
+
+// Skip word (mark it as wrong and show the answer)
+function skipWord() {
+    const word = categories[currentCategory][currentWordIndex];
+    document.getElementById('feedback').textContent = `❌ Incorrect! The correct answer is: ${word.japanese}`;
+    currentWordIndex++;
+    updateScore();
+
+    if (currentWordIndex >= categories[currentCategory].length) {
+        document.getElementById('feedback').textContent = `🎉 Finished! Final Score: ${score} / ${categories[currentCategory].length}`;
+        currentWordIndex = 0;
+        score = 0;
+        setTimeout(() => {
+            shuffleWords(categories[currentCategory]);
+            updateScore();
+            showNextWord();
+        }, 3000);
+    } else {
+        setTimeout(showNextWord, 1000);
+    }
 }
 
 // Update the score display
@@ -210,5 +256,3 @@ function updateProgressBar() {
 
 </body>
 </html>
-
-
