--- a/index.html
+++ b/index.html
@@ -1,271 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Japanese Typing Practice</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f3f3f3;
-            margin: 0;
-            padding: 20px;
-        }
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            text-align: center;
-        }
-        #word {
-            font-size: 30px;
-            text-align: center;
-            margin: 20px 0;
-        }
-        #feedback {
-            text-align: center;
-            font-size: 18px;
-            margin: 10px 0;
-        }
-        #score {
-            text-align: center;
-            font-size: 18px;
-        }
-        input[type="text"] {
-            font-size: 18px;
-            padding: 10px;
-            width: 100%;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        .progress-bar {
-            width: 100%;
-            background-color: #e0e0e0;
-            border-radius: 4px;
-            height: 20px;
-            margin: 10px 0;
-        }
-        .progress-bar-inner {
-            height: 100%;
-            background-color: #4caf50;
-            width: 0;
-            border-radius: 4px;
-        }
-        select {
-            font-size: 16px;
-            padding: 10px;
-            margin: 10px 0;
-            width: 100%;
-            border-radius: 4px;
-        }
-        .button-container {
-            text-align: center;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            margin-top: 10px;
-            cursor: pointer;
-            background-color: #4caf50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Japanese Typing Practice</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f3f3f3;
+      margin: 0;
+      padding: 20px;
+    }
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      text-align: center;
+    }
+    #word {
+      font-size: 30px;
+      text-align: center;
+      margin: 20px 0;
+    }
+    #feedback {
+      text-align: center;
+      font-size: 18px;
+      margin: 10px 0;
+    }
+    #score {
+      text-align: center;
+      font-size: 18px;
+    }
+    input[type="text"] {
+      font-size: 18px;
+      padding: 10px;
+      width: 100%;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    .progress-bar {
+      width: 100%;
+      background-color: #e0e0e0;
+      border-radius: 4px;
+      height: 20px;
+      margin: 10px 0;
+    }
+    .progress-bar-inner {
+      height: 100%;
+      background-color: #4caf50;
+      width: 0;
+      border-radius: 4px;
+    }
+    select {
+      font-size: 16px;
+      padding: 10px;
+      margin: 10px 0;
+      width: 100%;
+      border-radius: 4px;
+    }
+    .button-container {
+      text-align: center;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      margin-top: 10px;
+      margin-right: 10px;
+      cursor: pointer;
+      background-color: #4caf50;
+      color: white;
+      border: none;
+      border-radius: 4px;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
 
 <div class="container">
-    <h1>Japanese Typing Practice</h1>
+  <h1>Japanese Typing Practice</h1>
 
-    <label for="category">Choose a category:</label>
-    <select id="category" onchange="changeCategory()">
-        <option value="animals">Animals</option>
-        <option value="food">Food</option>
-        <option value="jlptN5">JLPT N5</option>
-        <option value="jlptN1" selected>JLPT N1</option>
-    </select>
+  <label for="category">Choose a category:</label>
+  <select id="category" onchange="changeCategory()">
+    <option value="animals">Animals</option>
+    <option value="food">Food</option>
+    <option value="jlptN5">JLPT N5</option>
+    <option value="jlptN1" selected>JLPT N1</option>
+  </select>
 
-    <div id="word"></div>
-    <input type="text" id="answer" placeholder="Type the word in Japanese" oninput="checkAnswer()">
-    <div id="feedback"></div>
-    <div id="score">Score: 0 / 0</div>
+  <div id="word"></div>
+  <input type="text" id="answer" placeholder="Type the word in Japanese" oninput="checkAnswer()">
+  <div id="feedback"></div>
+  <div id="score">Score: 0 / 0</div>
 
-    <div class="progress-bar">
-        <div id="progress-bar" class="progress-bar-inner"></div>
-    </div>
+  <div class="progress-bar">
+    <div id="progress-bar" class="progress-bar-inner"></div>
+  </div>
 
-    <div class="button-container">
-        <button id="skipButton" onclick="skipWord()">Skip</button>
-        <button id="hintButton" onclick="giveHint()">Hint</button>
-    </div>
+  <div class="button-container">
+    <button id="hintButton" onclick="showHint()">Hint</button>
+    <button id="skipButton" onclick="skipWord()">Skip</button>
+  </div>
 </div>
 
 <script>
-// Word categories will be loaded from the JSON files
 let categories = {};
-let currentCategory = 'jlptN1'; // Set default category to 'jlptN1'
+let currentCategory = 'jlptN1';
 let currentWordIndex = 0;
 let score = 0;
-let isAnswerSubmitted = false;  // To check if the answer has been submitted
-let isHintUsed = false; // To track if the hint was used
+let isAnswerSubmitted = false;
 
-// Load the word lists from the JSON files
-fetch('animals.json')
-    .then(response => response.json())
-    .then(data => {
-        categories.animals = data;
-    })
-    .catch(error => {
-        console.error("Error loading the animals vocabulary file:", error);
-    });
-
-fetch('food.json')
-    .then(response => response.json())
-    .then(data => {
-        categories.food = data;
-    })
-    .catch(error => {
-        console.error("Error loading the food vocabulary file:", error);
-    });
-
-fetch('jlptN5.json')
-    .then(response => response.json())
-    .then(data => {
-        categories.jlptN5 = data;
-    })
-    .catch(error => {
-        console.error("Error loading the JLPT N5 vocabulary file:", error);
-    });
-
+fetch('animals.json').then(r => r.json()).then(d => categories.animals = d);
+fetch('food.json').then(r => r.json()).then(d => categories.food = d);
+fetch('jlptN5.json').then(r => r.json()).then(d => categories.jlptN5 = d);
 fetch('jlptN1.json')
-    .then(response => response.json())
-    .then(data => {
-        categories.jlptN1 = data;
-        shuffleWords(categories[currentCategory]);
-        updateScore();
-        updateProgressBar();
-        showNextWord();
-    })
-    .catch(error => {
-        console.error("Error loading the JLPT N1 vocabulary file:", error);
-    });
-
-// Handle category change
-function changeCategory() {
-    const selectedCategory = document.getElementById('category').value;
-    currentCategory = selectedCategory;
-    currentWordIndex = 0;  // Reset to first word in new category
-    score = 0;              // Reset score
-    isHintUsed = false;     // Reset hint usage
-    shuffleWords(categories[currentCategory]);  // Shuffle the words of the selected category
-    updateScore();  // Update score display
-    showNextWord();  // Show the first word of the new category
-}
-
-// Show next word
-function showNextWord() {
-    const word = categories[currentCategory][currentWordIndex];
-    document.getElementById('word').textContent = word.english;
-    document.getElementById('feedback').textContent = '';
-    document.getElementById('answer').value = '';
-    document.getElementById('answer').focus();
-    isAnswerSubmitted = false;
-    isHintUsed = false;
-    const audio = new Audio(word.audio);
-    audio.play();
+  .then(r => r.json())
+  .then(data => {
+    categories.jlptN1 = data;
+    shuffleWords(categories[currentCategory]);
+    updateScore();
     updateProgressBar();
+    showNextWord();
+  });
+
+function changeCategory() {
+  const selectedCategory = document.getElementById('category').value;
+  currentCategory = selectedCategory;
+  currentWordIndex = 0;
+  score = 0;
+  shuffleWords(categories[currentCategory]);
+  updateScore();
+  showNextWord();
 }
 
-// Shuffle words randomly
+function showNextWord() {
+  const word = categories[currentCategory][currentWordIndex];
+  document.getElementById('word').textContent = word.english;
+  document.getElementById('feedback').textContent = '';
+  document.getElementById('answer').value = '';
+  document.getElementById('answer').focus();
+  isAnswerSubmitted = false;
+  const audio = new Audio(word.audio);
+  audio.play();
+  updateProgressBar();
+}
+
 function shuffleWords(array) {
-    for (let i = array.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [array[i], array[j]] = [array[j], array[i]];
-    }
+  for (let i = array.length - 1; i > 0; i--) {
+    const j = Math.floor(Math.random() * (i + 1));
+    [array[i], array[j]] = [array[j], array[i]];
+  }
 }
 
-// Check the typed answer
 function checkAnswer() {
-    if (isAnswerSubmitted) return;  // If answer has already been submitted, prevent further input
+  if (isAnswerSubmitted) return;
 
-    const input = document.getElementById('answer').value.trim();
-    const word = categories[currentCategory][currentWordIndex];
+  const input = document.getElementById('answer').value.trim();
+  const word = categories[currentCategory][currentWordIndex];
 
-    if (input && word.answers.includes(input)) {
-        score++;
-        document.getElementById('feedback').textContent = '✅ Correct!';
-        currentWordIndex++;
-        updateScore();
-
-        if (currentWordIndex >= categories[currentCategory].length) {
-            document.getElementById('feedback').textContent = `🎉 Finished! Final Score: ${score} / ${categories[currentCategory].length}`;
-            currentWordIndex = 0;
-            score = 0;
-            setTimeout(() => {
-                shuffleWords(categories[currentCategory]);
-                updateScore();
-                showNextWord();
-            }, 3000);
-        } else {
-            setTimeout(showNextWord, 1000);
-        }
-    } else {
-        document.getElementById('feedback').textContent = '❌ Try again!';
-    }
+  if (input && word.answers.includes(input)) {
+    score++;
+    document.getElementById('feedback').textContent = '✅ Correct!';
     isAnswerSubmitted = true;
-}
-
-// Skip word (mark it as wrong and show the answer)
-function skipWord() {
-    const word = categories[currentCategory][currentWordIndex];
-    document.getElementById('feedback').textContent = `❌ Incorrect! The correct answer is: ${word.japanese}`;
     currentWordIndex++;
     updateScore();
 
     if (currentWordIndex >= categories[currentCategory].length) {
-        document.getElementById('feedback').textContent = `🎉 Finished! Final Score: ${score} / ${categories[currentCategory].length}`;
-        currentWordIndex = 0;
-        score = 0;
-        setTimeout(() => {
-            shuffleWords(categories[currentCategory]);
-            updateScore();
-            showNextWord();
-        }, 3000);
+      document.getElementById('feedback').textContent =
+        `🎉 Finished! Final Score: ${score} / ${categories[currentCategory].length}`;
+      currentWordIndex = 0;
+      score = 0;
+      setTimeout(() => {
+        shuffleWords(categories[currentCategory]);
+        updateScore();
+        showNextWord();
+      }, 3000);
     } else {
-        setTimeout(showNextWord, 1000);
+      setTimeout(showNextWord, 1000);
     }
+  } else {
+    document.getElementById('feedback').textContent = '❌ Try again!';
+  }
 }
 
-// Give hint to the user
-function giveHint() {
-    const word = categories[currentCategory][currentWordIndex];
-    // Provide a hint by showing the first 2-3 characters of the Japanese word
-    const hint = word.japanese.slice(0, 3);  // First 3 characters of the word
-    document.getElementById('feedback').textContent = `Hint: ${hint}...`;
+function skipWord() {
+  const word = categories[currentCategory][currentWordIndex];
+  document.getElementById('feedback').textContent = `❌ Incorrect! The correct answer is: ${word.japanese}`;
+  currentWordIndex++;
+  updateScore();
 
-    // Mark the hint as used
-    isHintUsed = true;
+  if (currentWordIndex >= categories[currentCategory].length) {
+    document.getElementById('feedback').textContent =
+      `🎉 Finished! Final Score: ${score} / ${categories[currentCategory].length}`;
+    currentWordIndex = 0;
+    score = 0;
+    setTimeout(() => {
+      shuffleWords(categories[currentCategory]);
+      updateScore();
+      showNextWord();
+    }, 3000);
+  } else {
+    setTimeout(showNextWord, 1000);
+  }
 }
 
-// Update the score display
 function updateScore() {
-    document.getElementById('score').textContent = `Score: ${score} / ${categories[currentCategory].length}`;
+  document.getElementById('score').textContent =
+    `Score: ${score} / ${categories[currentCategory].length}`;
 }
 
-// Update the progress bar
 function updateProgressBar() {
-    const progress = (currentWordIndex / categories[currentCategory].length) * 100;
-    document.getElementById('progress-bar').style.width = `${progress}%`;
+  const progress = (currentWordIndex / categories[currentCategory].length) * 100;
+  document.getElementById('progress-bar').style.width = `${progress}%`;
+}
+
+function showHint() {
+  const word = categories[currentCategory][currentWordIndex];
+  const hint = word.japanese[0];
+  document.getElementById('feedback').textContent = `Hint: Starts with 「${hint}」`;
 }
 </script>
 
