--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f3f3f3;
+      background-color: #121212;
+      color: #ffffff;
       margin: 0;
       padding: 20px;
     }
@@ -15,12 +16,13 @@
       max-width: 600px;
       margin: 0 auto;
       padding: 20px;
-      background-color: #fff;
+      background-color: #1e1e1e;
       border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     }
     h1 {
       text-align: center;
+      color: #4caf50;
     }
     #word {
       font-size: 30px;
@@ -41,23 +43,25 @@
       padding: 10px;
       width: 100%;
       margin: 10px 0;
-      border: 1px solid #ccc;
+      border: 1px solid #444;
       border-radius: 4px;
+      background-color: #222;
+      color: #fff;
       box-sizing: border-box;
     }
     input.submitted-correct {
-      background-color: #e8f5e9;
+      background-color: #2e7d32;
       border: 2px solid #4caf50;
-      color: #2e7d32;
+      color: #ffffff;
     }
     input.submitted-incorrect {
-      background-color: #ffebee;
+      background-color: #b71c1c;
       border: 2px solid #f44336;
-      color: #b71c1c;
+      color: #ffffff;
     }
     .progress-bar {
       width: 100%;
-      background-color: #e0e0e0;
+      background-color: #333;
       border-radius: 4px;
       height: 20px;
       margin: 10px 0;
@@ -73,6 +77,9 @@
       padding: 10px;
       margin: 10px 0;
       width: 100%;
+      background-color: #222;
+      color: #fff;
+      border: 1px solid #444;
       border-radius: 4px;
     }
     .button-container {
@@ -92,9 +99,47 @@
     button:hover {
       background-color: #45a049;
     }
+
+    /* Loading screen styles */
+    #loading-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      color: #fff;
+      font-size: 24px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    .spinner {
+      border: 6px solid #333;
+      border-top: 6px solid #4caf50;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      animation: spin 1s linear infinite;
+      margin-bottom: 20px;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body>
+
+<!-- Loading screen -->
+<div id="loading-screen">
+  <div class="spinner"></div>
+  <div>Loading...</div>
+</div>
 
 <div class="container">
   <h1>Japanese Typing Practice</h1>
@@ -108,6 +153,7 @@
   </select>
 
   <div id="word"></div>
+  <input type="text" id="answer" onkeydown="handleKey(event)" autocomplete="off"/>
   <div id="feedback"></div>
   <div id="score">Score: 0 / 0</div>
 
@@ -128,18 +174,18 @@ let currentWordIndex = 0;
 let score = 0;
 let isAnswerSubmitted = false;
 
-fetch('animals.json').then(r => r.json()).then(d => categories.animals = d);
-fetch('food.json').then(r => r.json()).then(d => categories.food = d);
-fetch('jlptN5.json').then(r => r.json()).then(d => categories.jlptN5 = d);
-fetch('jlptN1.json').then(r => r.json()).then(d => categories.jlptN1 = d);
-  .then(r => r.json())
-  .then(data => {
-    categories.jlptN1 = data;
-    shuffleWords(categories[currentCategory]);
-    updateScore();
-    updateProgressBar();
-    showNextWord();
-  });
+Promise.all([
+  fetch('animals.json').then(r => r.json()).then(d => categories.animals = d),
+  fetch('food.json').then(r => r.json()).then(d => categories.food = d),
+  fetch('jlptN5.json').then(r => r.json()).then(d => categories.jlptN5 = d),
+  fetch('jlptN1.json').then(r => r.json()).then(d => categories.jlptN1 = d),
+]).then(() => {
+  document.getElementById('loading-screen').style.display = 'none';
+  shuffleWords(categories[currentCategory]);
+  updateScore();
+  updateProgressBar();
+  showNextWord();
+});
 
 function changeCategory() {
   const selectedCategory = document.getElementById('category').value;
@@ -184,7 +230,6 @@ function checkAnswer() {
 
   if (input && word.answers.includes(input)) {
     score++;
-    document.getElementById('feedback').textContent = '✅ Correct!';
     isAnswerSubmitted = true;
     answerInput.classList.add('submitted-correct');
     answerInput.disabled = true;
@@ -211,7 +256,6 @@ function checkAnswer() {
       }, 1000);
     }
   } else {
-    document.getElementById('feedback').textContent = '❌ Try again!';
     answerInput.classList.add('submitted-incorrect');
     setTimeout(() => {
       answerInput.classList.remove('submitted-incorrect');
